<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.driftingquiz.MainActivity">

        <!-- WELCOME MESSAGE-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <!-- 1st question header-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="1"
                android:textColor="@color/colorTextTitle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/question_1"
                android:padding="8dp"
                android:text="@string/question_1_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- 1st question answers-->

        <RadioGroup
            android:id="@+id/question_1_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q1a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionOne"
                android:paddingLeft="6dp"
                android:text="@string/question_1_answer_1" />

            <RadioButton
                android:id="@+id/q1a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionOne"
                android:paddingLeft="6dp"
                android:text="@string/question_1_answer_2" />

            <RadioButton
                android:id="@+id/q1a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionOne"
                android:paddingLeft="6dp"
                android:text="@string/question_1_answer_3" />

            <RadioButton
                android:id="@+id/q1a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionOne"
                android:paddingLeft="6dp"
                android:text="@string/question_1_answer_4" />

        </RadioGroup>

        <!-- 2nd question header-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="2"
                android:textColor="@color/colorTextTitle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/question_2"
                android:padding="8dp"
                android:text="@string/question_2_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- 2nd question answers-->

        <RadioGroup
            android:id="@+id/question_2_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q2a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionTwo"
                android:paddingLeft="6dp"
                android:text="@string/question_2_answer_1" />

            <RadioButton
                android:id="@+id/q2a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionTwo"
                android:paddingLeft="6dp"
                android:text="@string/question_2_answer_2" />

            <RadioButton
                android:id="@+id/q2a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionTwo"
                android:paddingLeft="6dp"
                android:text="@string/question_2_answer_3" />

            <RadioButton
                android:id="@+id/q2a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionTwo"
                android:paddingLeft="6dp"
                android:text="@string/question_2_answer_4" />

        </RadioGroup>

        <!-- 3rd question header-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="3"
                android:textColor="@color/colorTextTitle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/question_3"
                android:padding="8dp"
                android:text="@string/question_3_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- 3rd question answers-->

        <RadioGroup
            android:id="@+id/question_3_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q3a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionThree"
                android:paddingLeft="6dp"
                android:text="@string/question_3_answer_1" />

            <RadioButton
                android:id="@+id/q3a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionThree"
                android:paddingLeft="6dp"
                android:text="@string/question_3_answer_2" />

            <RadioButton
                android:id="@+id/q3a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionThree"
                android:paddingLeft="6dp"
                android:text="@string/question_3_answer_3" />

            <RadioButton
                android:id="@+id/q3a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionThree"
                android:paddingLeft="6dp"
                android:text="@string/question_3_answer_4" />

        </RadioGroup>

        <!-- 4th question header-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="4"
                android:textColor="@color/colorTextTitle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/question_4"
                android:padding="8dp"
                android:text="@string/question_4_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- 4th question answers-->

        <RadioGroup
            android:id="@+id/question_4_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q4a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFour"
                android:paddingLeft="6dp"
                android:text="@string/question_4_answer_1" />

            <RadioButton
                android:id="@+id/q4a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFour"
                android:paddingLeft="6dp"
                android:text="@string/question_4_answer_2" />

            <RadioButton
                android:id="@+id/q4a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFour"
                android:paddingLeft="6dp"
                android:text="@string/question_4_answer_3" />

            <RadioButton
                android:id="@+id/q4a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFour"
                android:paddingLeft="6dp"
                android:text="@string/question_4_answer_4" />

        </RadioGroup>

        <!-- 5th question header-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="5"
                android:textColor="@color/colorTextTitle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/question_5"
                android:padding="8dp"
                android:text="@string/question_5_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- 5th question answers-->

        <RadioGroup
            android:id="@+id/question_5_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q5a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFive"
                android:paddingLeft="6dp"
                android:text="@string/question_5_answer_1" />

            <RadioButton
                android:id="@+id/q5a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFive"
                android:paddingLeft="6dp"
                android:text="@string/question_5_answer_2" />

            <RadioButton
                android:id="@+id/q5a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFive"
                android:paddingLeft="6dp"
                android:text="@string/question_5_answer_3" />

            <RadioButton
                android:id="@+id/q5a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:onClick="questionFive"
                android:paddingLeft="6dp"
                android:text="@string/question_5_answer_4" />

        </RadioGroup>

        <!-- 6th question header-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/question_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="6"
                android:textColor="@color/colorTextTitle"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/question_6"
                android:padding="8dp"
                android:text="@string/question_6_title"
                android:textAllCaps="true"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp" />

        </RelativeLayout>

        <!-- 6th question answers-->

        <CheckBox
            android:id="@+id/q6a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingLeft="6dp"
            android:text="@string/question_6_answer_1" />

        <CheckBox
            android:id="@+id/q6a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingLeft="6dp"
            android:text="@string/question_6_answer_2" />

        <CheckBox
            android:id="@+id/q6a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingLeft="6dp"
            android:text="@string/question_6_answer_3" />

        <CheckBox
            android:id="@+id/q6a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingLeft="6dp"
            android:text="@string/question_6_answer_4" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Button for checking the answers-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkAnswers"
        android:text="@string/check_answers"
        android:textAllCaps="true"
        android:layout_weight="1"/>

    <!-- Button for resetting the quiz-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="@string/reset"
        android:textAllCaps="true" />
</LinearLayout>


    </LinearLayout>
</ScrollView>